Add role to install Samba and create Samba users

--- a/hosts.yml
+++ b/hosts.yml
@@ -8,5 +8,8 @@ pis:
       nas_users:
       - name: sebschlicht
         password: test
+        smbpasswd: smbtest
       - name: ispek
         password: test2
+        smbpasswd: smbtest2
+      samba_users: "{{ nas_users }}"
