Fix typo in username

--- a/hosts.yml
+++ b/hosts.yml
@@ -9,7 +9,7 @@ pis:
       - name: sebschlicht
         password: test
         smbpasswd: smbtest
-      - name: ispek
+      - name: isspek
         password: test2
         smbpasswd: smbtest2
       samba_users: "{{ nas_users }}"
