Add mount for NTFS device as HDD substitute

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,5 @@ services:
     restart: always
     ports:
       - "49100:22"
+    volumes:
+      - "/media/sebschlicht/hdd_stick:/mnt/nas/primary"
