Setup NAS user, restructure inventory

--- a/roles/samba/tasks/main.yml
+++ b/roles/samba/tasks/main.yml
@@ -3,6 +3,13 @@
     name: samba
     state: present
 
+- name: setup NAS user
+  include_tasks: user.yml
+  loop:
+    - "{{ nas.user }}"
+  loop_control:
+    loop_var: user
+
 - name: setup users
   include_tasks: user.yml
   loop: "{{ samba_users }}"
