--- a/hosts.yml
+++ b/hosts.yml
@@ -5,11 +5,17 @@ pis:
       ansible_become: yes
       ansible_become_method: sudo
       ansible_become_pass: "{{ pi_sudo_pass }}"
-      nas_users:
-      - name: sebschlicht
-        password: test
-        smbpasswd: smbtest
-      - name: isspek
-        password: test2
-        smbpasswd: smbtest2
-      samba_users: "{{ nas_users }}"
+      nas:
+        user:
+          name: nas
+          password: nas
+          smbpasswd: smbnas
+        mount_base_dir: /mnt/nas
+        users:
+          - name: sebschlicht
+            password: test
+            smbpasswd: smbtest
+          - name: isspek
+            password: test2
+            smbpasswd: smbtest2
+      samba_users: "{{ nas.users }}"
