--- a/roles/nas/tasks/main.yml
+++ b/roles/nas/tasks/main.yml
@@ -1,5 +1,23 @@
+- name: create NAS user
+  user:
+    name: "{{ nas.user.name }}"
+
+- name: prepare mount point root
+  file:
+    path: "{{ nas.mount_base_dir }}"
+    owner: root
+    group: root
+    mode: "755"
+
 - name: create system users
   include_tasks: user.yml
-  loop: "{{ nas_users }}"
+  loop: "{{ nas.users }}"
   loop_control:
     loop_var: user
+
+- name: mount
+  include_tasks: mount.yml
+  loop: "{{ nas.mounts }}"
+  loop_control:
+    loop_var: mount
+  when: nas.mounts is defined
