--- a/hosts.yml
+++ b/hosts.yml
@@ -10,12 +10,28 @@ pis:
           name: nas
           password: nas
           smbpasswd: smbnas
+          shares:
+            - name: software
+              type: public
+              path: /mnt/nas/primary/software
+            - name: videos-tv
+              type: public
+              path: /mnt/nas/primary/videos
         mount_base_dir: /mnt/nas
         users:
           - name: sebschlicht
             password: test
             smbpasswd: smbtest
+            shares:
+              - name: sebastian
+                type: private
+                path: /mnt/nas/primary/sebastian
+              - name: videos-sebastian
+                label: Sebastian's videos
+                type: semi-public
+                path: /mnt/nas/primary/sebastian/videos
           - name: isspek
             password: test2
             smbpasswd: smbtest2
-      samba_users: "{{ nas.users }}"
+      samba:
+        users: "[{{ nas.user }}] + {{ nas.users }}"
