Reduced Samba configuration to single file

--- a/hosts.yml
+++ b/hosts.yml
@@ -10,26 +10,14 @@ pis:
           name: nas
           password: nas
           smbpasswd: smbnas
-          shares:
-            - name: software
-              type: public
-              path: /mnt/nas/primary/software
-            - name: videos-tv
-              type: public
-              path: /mnt/nas/primary/videos
         mount_base_dir: /mnt/nas
+        mounts:
+          - name: primary
+          - name: secondary
         users:
           - name: sebschlicht
             password: test
             smbpasswd: smbtest
-            shares:
-              - name: sebastian
-                type: private
-                path: /mnt/nas/primary/sebastian
-              - name: videos-sebastian
-                label: Sebastian's videos
-                type: semi-public
-                path: /mnt/nas/primary/sebastian/videos
           - name: isspek
             password: test2
             smbpasswd: smbtest2
