--- a/roles/samba/tasks/user.yml
+++ b/roles/samba/tasks/user.yml
@@ -4,16 +4,10 @@
   changed_when: no
   failed_when: "'not found' in samba_user_exists.stdout"
   run_once: yes
-- set_fact:
+- name: store result
+  set_fact:
     samba_user_exists: "{{ samba_user_exists.rc == 0 }}"
 
 - name: create samba user '{{ user.name }}'
   shell: "(echo {{ user.smbpasswd }}; echo {{ user.smbpasswd }}) | smbpasswd -s -a {{ user.name }}"
   when: not samba_user_exists
-
-- name: configure shares for '{{ user.name }}'
-  include_tasks: share.yml
-  loop: "{{ user.shares }}"
-  loop_control:
-    loop_var: share
-  when: user.shares is defined
