--- a/roles/samba/tasks/main.yml
+++ b/roles/samba/tasks/main.yml
@@ -8,3 +8,9 @@
   loop: "{{ samba.users }}"
   loop_control:
     loop_var: user
+
+- name: config
+  blockinfile:
+    path: /etc/samba/smb.conf
+    block: "{{ lookup('file', 'smb.conf') }}"
+    validate: testparm -s %s
