Configure miniDLNA as in production

--- a/roles/minidlna/files/minidlna.conf
+++ b/roles/minidlna/files/minidlna.conf
@@ -1,3 +1,5 @@
+media_dir=/mnt/nas/primary/videos
 root_container=B
+notify_interval=20
 max_connections=300
-friendly_name="SchlichtNAS"
+friendly_name=SchlichtNAS
