--- a/roles/nas/tasks/mount.yml
+++ b/roles/nas/tasks/mount.yml
@@ -1,8 +1,8 @@
 - name: mount '{{ mount.name }}'
   mount:
     path: "{{ nas.mount_base_dir }}/{{ mount.name }}"
-    src: "{{ mount.device }}"
+    src: "UUID={{ mount.device_UUID }}"
     state: mounted
     fstype: ntfs-3g
     opts: windows_names,permissions,defaults,noauto,locale=de_DE.utf8
-  when: "mount.device is defined"
+  when: "mount.device_UUID is defined"
