Add secdev Samba share

--- a/roles/samba/files/smb.conf
+++ b/roles/samba/files/smb.conf
@@ -25,6 +25,10 @@
   force user = nas
   force group = nas
   guest ok = no
+[secdev]
+  copy = videos
+  path = /mnt/nas/primary/secdev
+  comment = Family share for encrypted containers.
 
 # Public shares
 [software]
