Add prod inventory, in contrast to dev

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,7 +1,16 @@
-pis:
-  hosts:
-    "localhost:49100":
-      ansible_user: pi
-      ansible_become: yes
-      ansible_become_method: sudo
-      ansible_become_pass: "{{ pi_sudo_pass }}"
+all:
+  children:
+    dev:
+      hosts:
+        "localhost:49100":
+          ansible_user: pi
+          ansible_become: yes
+          ansible_become_method: sudo
+          ansible_become_pass: "{{ pi_sudo_pass }}"
+    prod:
+      hosts:
+        pi:
+          ansible_user: pi
+          ansible_become: yes
+          ansible_become_method: sudo
+          ansible_become_pass: "{{ pi_sudo_pass }}"
