Add user mas, fix private share paths

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -14,5 +14,8 @@ nas:
     - name: isspek
       password: test2
       smbpasswd: smbtest2
+    - name: mas
+      password: test3
+      smbpasswd: smbtest3
 samba:
   users: "[{{ nas.user }}] + {{ nas.users }}"
