--- a/roles/samba/files/smb.conf
+++ b/roles/samba/files/smb.conf
@@ -1,6 +1,6 @@
 # Private shares
 [sebastian]
-  path = /mnt/nas/primary/sebastian
+  path = /mnt/nas/primary/backup/sebastian
   comment = Private share for user 'sebschlicht'.
   valid users = sebschlicht
   write list = sebschlicht
@@ -9,10 +9,16 @@
   guest ok = no
 [isspek]
   copy = sebastian
-  path = /mnt/nas/primary/isspek
+  path = /mnt/nas/primary/backup/isspek
   comment = Private share for user 'isspek'
   valid users = isspek
   write list = isspek
+[mas]
+  copy = sebastian
+  path = /mnt/nas/primary/backup/andrea-michael
+  comment = Private share for user 'mas'
+  valid users = mas
+  write list = mas
 
 # Family shares
 [videos]
