Add permission setup, start Samba

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,9 @@ services:
     restart: always
     ports:
       - "49100:22"
-    volumes:
-      - "/media/sebschlicht/hdd_stick:/mnt/nas/primary"
+      - "137:137/udp"
+      - "138:138/udp"
+      - "139:139/tcp"
+      - "445:445/tcp"
+networks:
+  default:
