--- a/hosts.yml
+++ b/hosts.yml
@@ -7,6 +7,7 @@ all:
           ansible_become: yes
           ansible_become_method: sudo
           ansible_become_pass: "{{ pi_sudo_pass }}"
+          copy_test_files: yes
     prod:
       hosts:
         pi:
@@ -14,3 +15,4 @@ all:
           ansible_become: yes
           ansible_become_method: sudo
           ansible_become_pass: "{{ pi_sudo_pass }}"
+          copy_test_files: no
