--- a/roles/nas/tasks/main.yml
+++ b/roles/nas/tasks/main.yml
@@ -1,7 +1,3 @@
-- name: create NAS user
-  user:
-    name: "{{ nas.user.name }}"
-
 - name: prepare mount point root
   file:
     path: "{{ nas.mount_base_dir }}"
@@ -11,10 +7,10 @@
     mode: "755"
 
 - name: create UNIX users
-  include_tasks: user.yml
-  loop: "{{ nas.users }}"
-  loop_control:
-    loop_var: user
+  include_tasks: users.yml
+
+- name: setup SSH server
+  include_tasks: sshd.yml
 
 - name: mount
   include_tasks: mount.yml
@@ -22,12 +18,6 @@
   loop_control:
     loop_var: mount
   when: nas.mounts is defined
-
-- name: copy test files
-  copy:
-    src: files/backup
-    dest: /mnt/nas/primary/
-  when: "copy_test_files"
 
 - name: file permissions
   block:
