--- a/hosts.yml
+++ b/hosts.yml
@@ -1,14 +1,21 @@
 all:
   children:
-    dev:
+    docker:
       hosts:
         "localhost:49100":
           ansible_user: pi
           ansible_become: yes
           ansible_become_method: sudo
-    prod:
+          mount_base_dir: /mnt/nas
+          mounts:
+          - name: primary
+    ref:
       hosts:
         "192.168.0.2":
           ansible_user: pi
           ansible_become: yes
           ansible_become_method: sudo
+          mount_base_dir: /mnt/nas
+          mounts:
+          - name: primary
+            uuid: 18A302FC66F67B28
