--- a/roles/nas/tasks/mount.yml
+++ b/roles/nas/tasks/mount.yml
@@ -1,8 +1,8 @@
 - name: mount '{{ mount.name }}'
   mount:
-    path: "{{ nas.mount_base_dir }}/{{ mount.name }}"
-    src: "UUID={{ mount.device_UUID }}"
+    path: "{{ mount_base_dir }}/{{ mount.name }}"
+    src: "UUID={{ mount.uuid }}"
     state: mounted
     fstype: ntfs-3g
     opts: windows_names,permissions,defaults,noauto,locale=de_DE.utf8
-  when: "mount.device_UUID is defined"
+  when: "mount.uuid is defined"
