--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -4,13 +4,13 @@
     state: present
     key: "{{ lookup('file', 'id_sebschlicht.pub') }}"
 
-- name: config
+- name: configure
   blockinfile:
     block: "{{ lookup('file', 'sshd_config') }}"
     path: /etc/ssh/sshd_config
   register: sshd_config
 
-- name: service
+- name: configure service
   service:
     name: sshd
     state: "{{ 'restarted' if sshd_config.changed else 'started' }}"
