--- a/roles/samba/tasks/main.yml
+++ b/roles/samba/tasks/main.yml
@@ -9,14 +9,14 @@
   loop_control:
     loop_var: user
 
-- name: config
+- name: configure
   blockinfile:
     path: /etc/samba/smb.conf
     block: "{{ lookup('file', 'smb.conf') }}"
     validate: testparm -s %s
 
-- name: start
+- name: configure service
   service:
     name: smbd
     state: started
-    enabled: no
+    enabled: yes
