Reuse user list for private Samba share creation

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -3,7 +3,10 @@ nas_user:
 users:
   - name: sebschlicht
     smbpasswd: smbtest
+    smbdir: sebastian
   - name: isspek
     smbpasswd: smbtest
+    smbdir: ipek
   - name: mas
     smbpasswd: smbtest
+    smbdir: andrea-michael
