Install sshd, if not present

--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: install
+  apt:
+    name: openssh-server
+    state: present
+
 - name: copy SSH key for user 'sebschlicht'
   authorized_key:
     user: sebschlicht
