Link root name change to alias change for mailing

--- a/roles/nas/tasks/mailing.yml
+++ b/roles/nas/tasks/mailing.yml
@@ -20,6 +20,8 @@
     path: /etc/ssmtp/revaliases
     block: |
       root:pi-ko@sschlicht.de:mx2f3e.netcup.net:465
+  register: alias
 
 - name: mailing - configure root name (mail sender)
   shell: chfn -f "Pi (Koblenz)" root
+  when: alias.changed
