Add tags for all plays and selected common nas tasks (mail, auto-upgrade)

--- a/roles/nas/tasks/hostname.yml
+++ b/roles/nas/tasks/hostname.yml
@@ -3,6 +3,7 @@
     name: "{{ nas.hostname }}"
   when: "ansible_fqdn != nas.hostname"
   register: hostname
+  tags: nas
 
 - name: hostname - update hosts file
   lineinfile:
@@ -11,3 +12,4 @@
     regexp: "^127.0.1.1"
     state: present
   when: hostname.changed
+  tags: nas
