--- a/roles/minidlna/tasks/main.yml
+++ b/roles/minidlna/tasks/main.yml
@@ -2,19 +2,23 @@
   apt:
     name: minidlna
     state: present
+  tags: minidlna
 
 - name: configure
   blockinfile:
     path: /etc/minidlna.conf
     block: "{{ lookup('file', 'minidlna.conf') }}"    
+  tags: minidlna
 
 - name: configure user access
   user:
     name: minidlna
     groups: "{{ nas.user.name }}"
+  tags: minidlna
 
 - name: start
   service:
     name: minidlna
     state: started
     enabled: yes
+  tags: minidlna
