--- a/roles/nas/tasks/main.yml
+++ b/roles/nas/tasks/main.yml
@@ -2,6 +2,7 @@
   apt:
     update_cache: yes
   changed_when: no
+  tags: nas
 
 - name: prepare mount point root
   file:
@@ -10,9 +11,11 @@
     owner: root
     group: root
     mode: 0755
+  tags: nas
 
 - name: create UNIX users
   include_tasks: users.yml
+  tags: nas
 
 - name: mount
   include_tasks: mount.yml
@@ -20,6 +23,7 @@
   loop_control:
     loop_var: mount
   when: mounts is defined
+  tags: nas
 
 - name: file permissions
   block:
@@ -33,6 +37,7 @@
       loop: "{{ users }}"
       loop_control:
         loop_var: user
+      tags: nas
 
     - name: file permissions of public shares
       file:
@@ -45,12 +50,16 @@
         - secdev
         - software
         - videos
+      tags: nas
 
-- name: setup mail-based notifications
+- name: prepare mail-based notifications
   include_tasks: mailing.yml
+  tags: [ nas, mail, auto-upgrade ]
 
 - name: setup unattended upgrades
   include_tasks: upgrades.yml
+  tags: [ nas, auto-upgrade ]
 
 - name: set hostname
   include_tasks: hostname.yml
+  tags: nas
