--- a/roles/samba/tasks/user.yml
+++ b/roles/samba/tasks/user.yml
@@ -4,7 +4,9 @@
   changed_when: no
   failed_when: "'not found' in samba_user_exists.stdout"
   run_once: yes
+  tags: samba
 
 - name: create samba user '{{ user.name }}'
   shell: "(echo {{ user.smbpasswd }}; echo {{ user.smbpasswd }}) | smbpasswd -s -a {{ user.name }}"
   when: "samba_user_exists.rc == 1"
+  tags: samba
