--- a/roles/nas/tasks/main.yml
+++ b/roles/nas/tasks/main.yml
@@ -1,69 +1,61 @@
-- name: update apt caches
-  apt:
-    update_cache: yes
-  changed_when: no
-  tags: nas
-
-- name: setup firewall
-  include_tasks: firewall.yml
-  tags: nas
-
-- name: prepare mount point root
+- name: prepare base mount point
   file:
-    path: "{{ mount_base_dir }}"
+    path: "{{ nas.mount_base_dir }}"
     state: directory
-    owner: root
-    group: root
+    owner: "{{ nas.user.name }}"
+    group: "{{ nas.user.name }}"
     mode: 0755
   tags: nas
 
-- name: create UNIX users
-  include_tasks: users.yml
+- name: create users
+  user:
+    name: "{{ user.name }}"
+    password: "{{ user.initial_password }}"
+    groups: "{{ user.groups | default(omit) }}"
+  with_items: "{{ users }}"
+  loop_control:
+    loop_var: user
   tags: nas
 
-- name: mount
+- name: mount external storages
   include_tasks: mount.yml
-  loop: "{{ mounts }}"
+  with_dict: "{{ nas.mounts }}"
   loop_control:
     loop_var: mount
-  when: mounts is defined
+  when: nas.mounts is defined
+
+- name: create primary backup directory layout
+  file:
+    path: "{{ nas.mount_base_dir }}/{{ nas.mounts.primary.name }}/backup"
+    state: directory
+    owner: "{{ nas.user.name }}"
+    group: "{{ nas.user.name }}"
+    mode: 0755
+    force: yes
   tags: nas
 
-- name: file permissions
-  block:
-    - name: file permissions of private shares
-      file:
-        path: "{{ mount_base_dir }}/{{ mounts[0].name }}/backup/{{ user.smbdir }}"
-        state: directory
-        owner: "{{ user.name }}"
-        group: "{{ user.name }}"
-        mode: 0700
-      loop: "{{ users }}"
-      loop_control:
-        loop_var: user
-      tags: nas
-
-    - name: file permissions of public shares
-      file:
-        path: "{{ mount_base_dir }}/{{ mounts[0].name }}/{{ item }}"
-        state: directory
-        owner: "{{ nas.user.name }}"
-        group: "{{ nas.user.name }}"
-        mode: 0777
-      loop:
-        - secdev
-        - software
-        - videos
-      tags: nas
+- name: create user backup directories and enforce secure permissions
+  file:
+    path: "{{ nas.mount_base_dir }}/{{ nas.mounts.primary.name }}/backup/{{ user.backup_folder_name | default(user.name) }}"
+    state: directory
+    owner: "{{ user.name }}"
+    group: "{{ user.name }}"
+    mode: 0750
+    force: yes
+  loop: "{{ users }}"
+  loop_control:
+    loop_var: user
+  tags: nas
 
 - name: prepare mail-based notifications
-  include_tasks: mailing.yml
-  tags: [ nas, mail, auto-upgrade ]
+  import_tasks: mailing.yml
+  tags: [ mailing, auto-upgrade ]
 
 - name: setup unattended upgrades
-  include_tasks: upgrades.yml
-  tags: [ nas, auto-upgrade ]
+  import_tasks: upgrades.yml
+  tags: auto-upgrade
 
 - name: set hostname
-  include_tasks: hostname.yml
+  import_tasks: hostname.yml
+  when: not running_in_container
   tags: nas
