--- a/roles/ufw/tasks/main.yml
+++ b/roles/ufw/tasks/main.yml
@@ -1,9 +1,9 @@
-- name: firewall - install
+- name: install
   apt:
     name: ufw
     cache_valid_time: 600
 
-- name: firewall - configure defaults
+- name: configure defaults
   ufw:
     default: "{{ item.default | default(omit) }}"
     direction: "{{ item.direction | default(omit) }}"
@@ -13,14 +13,32 @@
     - default: allow
       direction: outgoing
     
-- name: firewall - configure OpenSSH
+- name: allow SSH communication
   ufw:
     rule: limit
     name: OpenSSH
   tags: sshd
 
-- name: firewall - (re)start service
+- name: allow access to Samba
+  ufw:
+    rule: allow
+    name: Samba
+  tags: smb
+
+- name: allow DLNA communication
+  ufw:
+    rule: allow
+    proto: "{{ item.proto }}"
+    to_port: "{{ item.to_port }}"
+  with_items:
+    - to_port: 8200
+      proto: tcp
+    - to_port: 1900
+      proto: udp
+
+- name: enable/reload service
   service:
     name: ufw
     state: reloaded
     enabled: yes
+  when: not running_in_container
