--- a/roles/nas/tasks/mount.yml
+++ b/roles/nas/tasks/mount.yml
@@ -3,7 +3,7 @@
     path: "{{ nas.mount_base_dir }}/{{ mount.value.name }}"
     src: "UUID={{ mount.value.uuid }}"
     state: mounted
-    fstype: ntfs-3g
-    opts: windows_names,permissions,defaults,noauto,locale=de_DE.utf8
+    fstype: "{{ mount.value.fstype | default('ntfs-3g') }}"
+    opts: "{{ mount.value.opts | default('windows_names,permissions,defaults,noauto,locale=de_DE.utf8') }}"
   when: mount.value.uuid is defined
   tags: nas
